Added router_mixin to include all functions that update the state of the current page. Added hooks to the html to allow ajax interception of form submission

--- a/cadasta/templates/organization/project_wrapper.html
+++ b/cadasta/templates/organization/project_wrapper.html
@@ -242,6 +242,6 @@ window.addEventListener('load', function() {
 </div><!-- /.modal -->
 
 
-<div class="modal fade" id="additional_modals" ></div>
+<div class="modal fade" id="additional-modals" ></div>
 
 {% endblock %}
