--- a/cadasta/templates/organization/project_map.html
+++ b/cadasta/templates/organization/project_map.html
@@ -3,28 +3,24 @@
 {% load i18n %}
 
 {% load staticfiles %}
+{% load leaflet_tags %}
 
 {% block extra_head %}
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
+{% leaflet_css plugins="groupedlayercontrol,markercluster" %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-geocoder-mapzen/1.7.1/leaflet-geocoder-mapzen.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.9/select2-bootstrap.min.css" />
 <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/jquery-ui.structure.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/MarkerCluster.css' %}">
-<link rel="stylesheet" href="{% static 'css/MarkerCluster.Default.css' %}">
 <link rel="stylesheet" href="{% static 'css/jquery-ui.theme.min.css' %}">
 {% endblock %}
 
 {% block extra_script %}
-<script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
+{% leaflet_js plugins="groupedlayercontrol,markercluster" %}
 <script src="{% static 'js/jquery-ui.min.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
 <script type="text/javascript" src="{% static 'buckets/js/script.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-geocoder-mapzen/1.7.1/leaflet-geocoder-mapzen.js"></script>
-<!-- <script src="{% static 'js/dataTables.forms.js' %}"></script> -->
-<script src="{% static 'js/leaflet.markercluster.js' %}"></script>
-<script src="{% static 'js/L.Map.Deflate.js' %}"></script>
 <script>
   var url = '/async/organizations/' +
       '{{ project.organization.slug }}/projects/{{ project.slug }}/spatial/tiled/{z}/{x}/{y}';
@@ -48,6 +44,7 @@
   var layers = {{ leaflet_tiles|safe }}
 
 </script>
+<script src="{% static 'js/L.Map.Deflate.js' %}"></script>
 <script src="{% static 'js/smap/lazytiles.js' %}"></script>
 <script src="{% static 'js/smap/L.TileLayer.GeoJSON.js' %}"></script>
 <script src="{% static 'js/smap/map.js' %}"></script>
