--- a/cadasta/templates/resources/table_sm.html
+++ b/cadasta/templates/resources/table_sm.html
@@ -26,7 +26,7 @@
       </td>
       <td>
       {% if submit_url %}
-        <form method="POST" id="detail-form">
+        <form method="POST" class="detach-form">
         {% csrf_token %}
           <button type="submit" class="btn btn-danger btn-sm pull-right" role="button" formaction="{% url 'resources:detach' object.organization.slug object.slug resource.id resource.attachment_id %}">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {% trans "Detach" %}
@@ -38,7 +38,6 @@
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {% trans "Detach" %}
           </button>
       {% endif %}
-          
         </form>
       </td>
     </tr>
