--- a/cadasta/templates/resources/table_sm.html
+++ b/cadasta/templates/resources/table_sm.html
@@ -28,7 +28,7 @@
       {% if submit_url %}
         <form method="POST" class="detach-form">
         {% csrf_token %}
-          <button type="submit" class="btn btn-danger btn-sm pull-right" role="button" formaction="{% url 'resources:detach' object.organization.slug object.slug resource.id resource.attachment_id %}">
+          <button type="submit" class="btn btn-danger btn-sm pull-right submit-btn" role="button" formaction="{% url 'resources:detach' object.organization.slug object.slug resource.id resource.attachment_id %}">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {% trans "Detach" %}
           </button>
       {% else %}
